--- a/landing-pages/css/landing.css
+++ b/landing-pages/css/landing.css
@@ -3,3 +3,11 @@ body {
     margin: 0;
 }
 
+form.post-password-form {
+    margin: 2rem auto;
+    width: 50%;
+    min-width: 300px;
+    border: solid 1px;
+    padding: 1rem;
+    text-align: center;
+}
